--- a/styles/website.css
+++ b/styles/website.css
@@ -98,3 +98,17 @@ table td:nth-child(1) {
 .book-summary ul.summary li a, .book-summary ul.summary li span {
   padding: 8px 15px;
 }
+
+.markdown-section kbd {
+    display: inline-block;
+    padding: 3px 5px 2px;
+    font: 12px "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    line-height: 1em;
+    color: #444d56;
+    vertical-align: middle;
+    background-color: #fafbfc;
+    border: solid 1px #c6cbd1;
+    border-bottom-color: #959da5;
+    border-radius: 3px;
+    box-shadow: inset 0 -1px 0 #959da5;
+}
